# assembler

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  cop.cpp  cop.h  global.h  i.cpp  i.h  instructions_types.cpp  instructions_types.h  j.h  main.cpp  parser.cpp  parser.h  r.cpp  r.h  ri.cpp
include/: CLI11.hpp  api.h  cli.h  cop.h  data.h  global.h  i.h  instructions_types.h  j.h  parser.h  r.h  ri.h  test_utils.h  thead_parser.h  thread_parser.h
src/: api.cpp  cop.cpp  data.cpp  global.cpp  i.cpp  instructions_types.cpp  main.cpp  parser.cpp  r.cpp  ri.cpp  thead_parser.cpp  thread_parser.cpp
tests/: test_block.cpp  test_cop.cpp  test_data.cpp  test_i.cpp  test_j.cpp  test_parser.cpp  test_r.cpp  test_ri.cpp  test_utils.h  tests.cmake
