cmake_minimum_required(VERSION 3.15)
project(assembler)

set(CMAKE_CXX_STANDARD 17)
add_subdirectory(abseil-cpp)
add_subdirectory(mimalloc)
include_directories(abseil-cpp mimalloc include)
add_executable(assembler src/main.cpp include/global.h)
set(ABSL_LIBS absl::flat_hash_map)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
add_library(meta STATIC include/instructions_types.h src/instructions_types.cpp)
add_library(parsing STATIC include/j.h include/i.h src/i.cpp include/r.h src/r.cpp src/ri.cpp include/ri.h src/cop.cpp include/cop.h include/parser.h src/parser.cpp)
target_link_libraries(parsing meta ${ABSL_LIBS})
target_link_libraries(assembler PUBLIC mimalloc-static)

include(tests/tests.cmake)