cmake_minimum_required(VERSION 3.5)
project(assembler)

set(CMAKE_CXX_STANDARD 11)
add_subdirectory(abseil-cpp)
add_subdirectory(mimalloc)
include_directories(abseil-cpp mimalloc/include include)
find_package(Threads REQUIRED)
find_package(OpenMP REQUIRED)
set(ABSL_LIBS absl::flat_hash_map)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
add_executable(assembler src/main.cpp include/global.h include/cli.h)
add_library(meta STATIC include/global.h src/global.cpp include/instructions_types.h src/instructions_types.cpp)
add_library(parsing STATIC include/j.h include/i.h src/i.cpp include/r.h src/r.cpp src/ri.cpp include/ri.h src/cop.cpp include/cop.h include/parser.h src/parser.cpp)
add_library(thread_parser STATIC src/thread_parser.cpp include/thread_parser.h)
target_link_libraries(meta PUBLIC mimalloc-static)
target_link_libraries(parsing PUBLIC meta ${ABSL_LIBS})
target_link_libraries(thread_parser PUBLIC parsing Threads::Threads)
target_link_libraries(assembler parsing thread_parser)
include(tests/tests.cmake)